--- a/src/Components/Info3/Info3.css
+++ b/src/Components/Info3/Info3.css
@@ -2,54 +2,63 @@
   color: white;
   position: relative;
   padding-bottom: 2rem;
+  gap: 3rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .info3-container {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-top: 3rem;
 }
 .info3-left {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 2rem;
+  text-align: center;
+  max-width: 600px;
+}
+.info3-right {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.image-container img {
-  width: 100%;
-  height: 100%;
+.info3-image > img {
+  width: 400px;
+  height: 400px;
   margin-left: 10px;
 }
 .info3-title h3 {
   font-weight: normal;
-  font-size: 18px;
-  line-height: 20px;
+  font-size: 16px;
+  line-height: 24px;
   color: white;
-  margin-top: 40px;
-}
-.info3-title {
-  margin-top: 70px;
+  margin-top: 1rem;
   text-align: left;
-  height: 230px;
-  width: 486px;
 }
-@media (max-width: 740px) {
-  
-  .info3-title {
-    padding-right: 20px;
-    margin-left: -20px;
+@media (max-width: 450px) {
+  .info3-image > img {
+    width: 200px;
+    height: 200px;
   }
-  .image-container {
+  .info3-image {
+    margin-left: 50px;
+  }
+  .info3-right {
+    order: -1;
+  }
+  .info3-title {
     width: 100%;
     max-width: 300px;
-    height: auto;
-    margin-left: 40px;
-  }
-  .info-right {
-    order: -1;
-    margin-top: 2rem;
   }
     .info3-title h3 {
-    font-size: 16px;
-    line-height: 24px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 1rem;
+    text-align: center;
   }
 }
