--- a/src/Components/Pages/Home.css
+++ b/src/Components/Pages/Home.css
@@ -1,7 +1,7 @@
 .hero-wrapper {
   color: white;
   position: relative;
-  padding-bottom: 2rem;
+  padding-bottom: 1.5rem;
 }
 
 .hero-container {
@@ -14,7 +14,7 @@
 .hero-left {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  margin-top: 80px;
 }
 
 .hero-title h1 {
@@ -31,20 +31,17 @@
 }
 
 .image-container {
-  width: 30rem;
-  height: 30rem;
-}
-
-.image-container img {
-  width: 100%;
-  height: 100%;
-  margin-left: 10px;
+  width: 35rem;
+  height: 40rem;
 }
 
 .hero-title-img {
   position: relative;
   justify-content: space-between;
   align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .hero-title-img > img {
@@ -80,8 +77,13 @@
   width: 20px;
   height: 20px;
 }
+.hero-right{
+  margin-top: -160px;
+  width: fit-content;
+  margin-left: 10px;
+}
 
-@media (max-width: 740px) {
+@media (max-width: 772px) {
   .hero-container {
     flex-direction: column;
     align-items: center;
@@ -89,15 +91,17 @@
 
   .hero-right {
     order: -1;
-    margin-top: 2rem;
+    margin-left: -50px;
   }
   .hero-title>h1{
     font-size: 20px;
   }
-
+  .hero-title-img {
+    align-items: center;
+  }
   .hero-title-img > img {
-    height: 150px;
-    width: 300px;
+    height: 200px;
+    width: 500px;
   }
    .image-container {
     width: 100%;
