--- a/src/Components/Product1/Product1.css
+++ b/src/Components/Product1/Product1.css
@@ -1,52 +1,88 @@
-.info-wrapper {
+.product-wrapper {
   color: white;
   position: relative;
-}
-.info-container {
+  padding-bottom: 2rem;
+  gap: 3rem;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
 }
-.info-Product {
+
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+
+.product-left {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  text-align: center;
+  max-width: 600px;
 }
 
-.image-container img {
-  width: 100%;
-  height: 100%;
+.product-right {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-image > img {
+  width: 400px;
+  height: 400px;
   margin-left: 10px;
 }
-.info-Product h1 {
-  font-weight: 800px;
-  font-size: 4rem;
-  line-height: 2.1rem;
-  margin-top: -50px;
-  font-family: poppins;
+
+.product-head {
+  font-size: 2.5rem;
+  font-weight: 800;
+  line-height: 48px;
+  color: #ffffff;
+  margin-bottom: 1rem;
+  align-items: center;
 }
 
-.Product-title {
-  margin-top: 40px;
+.product-title h3 {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+  margin-top: 1rem;
   text-align: left;
-  height: 230px;
-  width: 486px;
 }
-@media (max-width: 740px) {
-  .info-Product>h1{
-    font-size: 28px;
-    margin-top: 150px;
+.product-title>span {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  color: white;
+  margin-top: 1rem;
+  text-align: left;
+}
+
+@media (max-width: 450px) {
+  .product-image > img {
+    width: 200px;
+    height: 200px;
   }
-  .info-container{
-    margin-top: 200px;
+  .product-image {
+    margin-left: 50px;
   }
-  .image-container {
+
+  .product-title {
     width: 100%;
     max-width: 300px;
-    margin-left: 60px;
   }
-  .info-Product {
+
+  .product-title h3 {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 1rem;
+    text-align: center;
+  }
+  .product-right {
     order: -1;
-    margin-top: 150px;
   }
 }
