--- a/src/Components/Catagories/Catagories.css
+++ b/src/Components/Catagories/Catagories.css
@@ -13,6 +13,10 @@
   display: flex;
   flex-direction: column;
 }
+.apnicab-logo {
+  margin-top: -30px;
+  
+}
 .apnicab-logo button {
   background: none;
   border: none;
@@ -23,9 +27,7 @@
   margin-left: 7rem;
   margin-top: -20px;
 }
-.apnicab-logo {
-  margin-top: -30px;
-}
+
 .Catagories1-title1 {
   font-size: 32px;
   font-weight: 700;
@@ -40,54 +42,66 @@
   align-items: center;
 }
 @media (max-width: 740px) {
-/* Catagories.css */
+  /* Catagories.css */
+  .c-head {
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 48px;
+    color: #ffffff;
+    margin-bottom: 1rem;
+    align-items: center;
+  }
+  .c-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+  }
 
-.c-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 0;
-}
+  .c-container {
+    flex-direction: column;
+  }
 
-.c-container {
-  flex-direction: column;
-}
+  .c-left,
+  .c-right {
+    width: 100%;
+    max-width: 400px;
+  }
 
-.c-left,
-.c-right {
-  width: 100%;
-  max-width: 400px;
-  margin-bottom: 20px;
-}
+  .Catagories {
+    border-radius: 8px;
+    padding: 20px;
+  }
 
-.Catagories {
-  border-radius: 8px;
-  padding: 20px;
-}
+  .Catagories1-title1 {
+    font-size: 25px;
+    text-align: left;
+  }
 
-.Catagories1-title1 {
-  text-align: center;
-  margin-bottom: 10px;
-}
+  .apnicab-logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -20px;
+  }
+  .apnicab-logo .cabimg {
+    margin-left: 60px;
+  }
+  .apnicab-logo button {
+    font-size: 14px;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    white-space: nowrap;
+  }
 
-.apnicab-logo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.apnicab-logo button {
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-
-.apnicab-logo img {
-  max-width: 100%;
-  height: auto;
-}
-
+  .apnicab-logo img {
+    max-width: 100%;
+    height: auto;
+    margin-left: 40px;
+    margin-top: -30px;
+  }
 }
