--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -68,3 +68,24 @@ footer .copyright {
     width: 100%;
     text-align: center;
 }
+.icon{
+    width: 40px;
+    height: 40px;
+    display: inline;
+}
+@media (max-width:477px) {
+    .install{
+        padding: 20px;
+    } 
+    .icon{
+        white-space: nowrap;
+    }
+    .icon>img{
+        scale: 40%;
+        margin-left: -10px;
+    }
+    .Addres{
+        padding-left: 70px;
+    }
+    
+}
