--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -42,7 +42,7 @@
   line-height: 48px;
   color: #ffffff;
   margin-bottom: 1rem;
-  text-align: center;
+  align-items: center;
 }
 
 .info-title h3 {
@@ -51,7 +51,7 @@
   line-height: 24px;
   color: white;
   margin-top: 1rem;
-  text-align: left;
+  text-align: justify;
 }
 
 @media (max-width: 450px) {
@@ -59,7 +59,7 @@
     width: 200px;
     height: 200px;
   }
-  
+
   .info-image {
     margin-left: 50px;
     margin-top: 100px;
@@ -69,16 +69,43 @@
     width: 100%;
     max-width: 300px;
   }
-  
+
   .info-right {
     order: -1;
+    width: 100%;
+    height: 100%;
+    align-items: center;
   }
-  
+
   .info-title h3 {
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
     margin-top: 1rem;
+    text-align: justify;
+  }
+}
+@media (max-width: 1142px) {
+  .info-right {
+    order: -1;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+  .info-head {
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 48px;
+    color: #ffffff;
+    margin-bottom: 1rem;
+    align-items: center;
+  }
+  .info-title{
+    align-items: center;
     text-align: center;
   }
+  .info-title h3 {
+    text-align: justify;
+  }
+
 }
