--- a/src/Components/Pages/Home.css
+++ b/src/Components/Pages/Home.css
@@ -28,6 +28,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 30px;
+  text-align: justify;
 }
 
 .image-container {
@@ -41,7 +42,6 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-
 }
 
 .hero-title-img > img {
@@ -77,7 +77,7 @@
   width: 20px;
   height: 20px;
 }
-.hero-right{
+.hero-right {
   margin-top: -160px;
   width: fit-content;
   margin-left: 10px;
@@ -93,23 +93,41 @@
     order: -1;
     margin-left: -50px;
   }
-  .hero-title>h1{
+  .hero-title > h1 {
     font-size: 20px;
   }
   .hero-title-img {
     align-items: center;
+    margin-right: 15px;
   }
   .hero-title-img > img {
-    height: 200px;
+    height: 300px;
     width: 500px;
   }
-   .image-container {
+  .image-container {
     width: 100%;
     max-width: 400px;
     height: auto;
     margin-top: 2rem;
+    align-items: center;
+    margin-left: 20px;
   }
-  .download-button{
+  .image-container >img{
+    height: 300px;
+    width: 350px;
+  }
+  .download-button {
     margin-left: -10px;
+  }
+  .hero-left {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+}
+@media (max-width: 1142px) {
+  .hero-right {
+    order: -1;
+    margin-left: -50px;
   }
 }
