--- a/src/Components/Product1/Product1.css
+++ b/src/Components/Product1/Product1.css
@@ -50,9 +50,9 @@
   line-height: 24px;
   color: white;
   margin-top: 1rem;
-  text-align: left;
+  text-align: justify;
 }
-.product-title>span {
+.product-title > span {
   font-weight: bold;
   font-size: 18px;
   line-height: 24px;
@@ -66,9 +66,6 @@
     width: 200px;
     height: 200px;
   }
-  .product-image {
-    margin-left: 50px;
-  }
 
   .product-title {
     width: 100%;
@@ -80,9 +77,33 @@
     font-size: 14px;
     line-height: 20px;
     margin-top: 1rem;
-    text-align: center;
+    text-align: justify;
   }
   .product-right {
     order: -1;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+}
+@media (max-width: 1142px) {
+  .product-right {
+    order: -1;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+  .product-title {
+    align-items: center;
+    text-align: center;
+  }
+  .product-title {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .product-title h3{
+    text-align: justify;
   }
 }
